test/test_cases/invalid/semanticErr/function/undefinedCall.ast
-- Test: undefinedCall.wacc

-- Uploaded file: 
---------------------------------------------------------------
# tries to assign to a function

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  int f = call fun()
end
---------------------------------------------------------------

-- Compiler Output:
-- Compiling...
Errors detected during compilation! Exit code 200 returned.
Semantic Error at 12:15 -- Variable fun is not defined in this scope

